ingress/infra/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      name: nas
