ingress/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nas
spec:
  ingressClassName: nginx
  rules:
  - host: nas.theramirez.casa
    http:
      paths:
      - backend:
          service:
            name: nas
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - nas.theramirez.casa
    secretName: nas-casa-tls
